Colaboratory を使用して作成しました

--- a/GeisterWorkshop.ipynb
+++ b/GeisterWorkshop.ipynb
@@ -32,7 +32,9 @@
         "colab_type": "text"
       },
       "source": [
-        "ボードゲームAIワークショップ第1回「ガイスター」のサンプルプログラムです。\n",
+        "ボードゲームAIワークショップ第1回「ガイスター」のサンプルプログラムです。  \n",
+        "© Morikatron Inc. 2019  \n",
+        "written by matsubara@morikatron.co.jp  \n",
         "\n",
         "**概要**\n",
         "\n",
@@ -162,8 +164,9 @@
         "# coding:utf-8\n",
         "\"\"\"\n",
         "Geister program for Board game AI Workshop #1\n",
+        "\n",
+        "© Morikatron Inc. 2019\n",
         "written by matsubara@morikatron.co.jp\n",
-        "2019/5/20\n",
         "\n",
         "動作環境はPython 3.5以降。特別なライブラリは不要。\n",
         "\"\"\"\n",
@@ -947,6 +950,7 @@
         "        if is_correct_move(move):\n",
         "            break\n",
         "    return move\n",
+        "\n",
         "\n",
         "if __name__ == '__main__':\n",
         "    main()\n"
