Colaboratory を使用して作成しました

--- a/GeisterWorkshop.ipynb
+++ b/GeisterWorkshop.ipynb
@@ -221,8 +221,8 @@
         "    enter_opponent_move = 1  # 相手の打ち手（x,y,direction）の入力待ち\n",
         "    enter_color_of_captured_piece = 2  # AIがとったコマの色の入力待ち\n",
         "    next_is_AI_move = 3  # 次はAIの番です\n",
-        "    won = 4  # 私の勝ち\n",
-        "    lost = 5  # 私の負け\n",
+        "    won = 4  # AIの勝ち\n",
+        "    lost = 5  # AIの負け\n",
         "\n",
         "\n",
         "# クラスを定義\n",
@@ -302,9 +302,9 @@
         "\n",
         "    def __init__(self, which_player=ME, piece_ix=-1, piece_x=0, piece_y=0, direction='n'):\n",
         "        self.which_player = which_player  # プレイヤー番号\n",
-        "        self.piece_ix = piece_ix  # コマの番号\n",
-        "        self.piece_x = piece_x  # コマの番号\n",
-        "        self.piece_y = piece_y  # コマの番号\n",
+        "        self.piece_ix = piece_ix  # コマの番号　（コマの番号を指定するか、X,Yを指定するか。どっちでもかまわない）\n",
+        "        self.piece_x = piece_x  # コマのX座標\n",
+        "        self.piece_y = piece_y  # コマのY座標\n",
         "        self.direction = direction  # コマの移動方向\n",
         "        self.x_after_move = 0  # コマを動かした後のX座標\n",
         "        self.y_after_move = 0  # コマを動かした後のY座標\n",
@@ -500,9 +500,9 @@
         "    elif g.game_state == GameState.enter_color_of_captured_piece:  # AIがとったコマの色の入力待ち\n",
         "        print('enter r or b (color of captured piece)')\n",
         "    elif g.game_state == GameState.won:  # 勝った表示\n",
-        "        print('I won!')\n",
+        "        print('My AI won!')\n",
         "    elif g.game_state == GameState.lost:  # 負けた表示\n",
-        "        print('I lost.')\n",
+        "        print('My AI lost.')\n",
         "\n",
         "\n",
         "def show_help() -> None:\n",
@@ -831,7 +831,7 @@
         "            if is_correct_move(move):\n",
         "                return move\n",
         "        # どの方角にも動けなかった場合はここまで落ちてきて、次のコマを試す\n",
-        "    # すべての赤コマが動けない状態はここまで落ちてくるので、ランダムな手を返す\n",
+        "    # すべての指定色コマが動けない状態はここまで落ちてくるので、ランダムな手を返す\n",
         "    return think_random()\n",
         "\n",
         "\n",
