敵陣右上から脱出しようとしてミスるバグを修正。

--- a/GeisterWorkshop.ipynb
+++ b/GeisterWorkshop.ipynb
@@ -867,7 +867,7 @@
         "    if which_player == ME:\n",
         "        if piece.color == COL_B:\n",
         "            return Move(which_player=ME,\n",
-        "                        piece_x=0,\n",
+        "                        piece_x=BOARD_WIDTH - 1,    # これが0になっていたので修正しました。事故った方ごめんなさいです！\n",
         "                        piece_y=0,\n",
         "                        direction='w')\n",
         "    return None\n",
